# vscode-python-demo1

./: .gitignore  README.md  pyproject.toml
tests/: test_server.py
vscode_python_demo1/: __init__.py  server.py
vscode_python_demo1/entrypoint/: startup.py
